--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/forms": "^0.5.11",
     "an-array-of-english-words": "^2.0.0",
     "autoprefixer": "^10.4.24",
+    "emoji-picker-react": "^4.18.0",
     "localforage": "^1.10.0",
     "lucide-react": "^0.575.0",
     "postcss": "^8.5.6",
