feat: Add Docker and Docker Compose for backend containerization, remove the keepalive workflow, and enable frontend deployment with gh-pages.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 __pycache__/
-venv/
+# Environments
 .env
-.env.example
-backend/.env
-backend/anzen.db
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/ckend/anzen.db
